--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,10 +25,10 @@
 
     const appleParams = new URLSearchParams({
         response_type: 'code',
-        response_mode: 'query',
+        response_mode: 'form_post',  // 수정된 부분
         client_id: [[${appleClientId}]],
         redirect_uri: 'https://leeyj.xyz/auth/login/apple/callback',
-        scope: 'email name'
+        scope: 'email name'  // 'name'과 'email' 요청 시 이 설정이 필요
     });
 
     document.getElementById('apple-login-btn').href =
